<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- app -->
    <string name="app_name">TimeToGo</string>
    <string name="Add">Add</string>
    <string name="Delete">Delete</string>
   
    <string name="Cancel">Cancel </string>
    <string name="Ok">OK </string>
    <string name="title_activity_add_new_todo_item">Add New Item</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="parseApplication">gBzdthO4fpuoofOYxHMkjhLPBnlGMJ2jzvgwpsgY</string>
    <string name="clientKey">1O6yZeKPK9lTa39A0Rb4beEcQLmziQHdpGIPTOBo</string>
    
    <string name="useAlarm">Use Alarm</string>
    <string name="setAlarm">Set Alarm</string>
    <string name="alarmRepeat">Repeat</string>
    
    <!--hint  -->
    <string name="hint_taskName">Please input the activity name</string>
    <string name="hint_taskPriority">Please input the Priority number(0 or 1)</string>
    
</resources>