<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="658dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".AddNewTodoItemActivity" android:layout_gravity="left">

        <EditText
            android:id="@+id/edtNewItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_taskName">
            
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edit_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edtNewItem"
            android:layout_alignRight="@+id/edtNewItem"
            android:layout_below="@+id/edtNewItem"
            android:inputType="number" 
            android:hint= "@string/hint_taskPriority"/>

        <CheckBox
            android:id="@+id/useAlarmCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_priority"
            android:layout_below="@+id/edit_priority"
            android:layout_marginTop="14dp"
            android:text="@string/useAlarm" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnCancel"
            android:layout_alignBottom="@+id/btnCancel"
            android:layout_alignRight="@+id/edit_priority"
            android:text="@string/Ok" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/useAlarmCheck"
            android:layout_below="@+id/useAlarmCheck"
            android:layout_marginTop="57dp"
            android:text="@string/Cancel" />

        <Button
            android:id="@+id/setAlarmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnOK"
            android:layout_alignLeft="@+id/btnCancel"
            android:enabled="false"
            android:text="@string/setAlarm" />

    </RelativeLayout>

</ScrollView>